# qDBManager

./: CMakeLists.txt  qdbmanager.cpp  qdbmanager.h
entities/: abstractEntity.h
interfaces/: qsqlite.cpp  qsqlite.h
